--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.boxfuse.samples</groupId>
     <artifactId>hello</artifactId>
     <packaging>war</packaging>
-    <version>1.0</version>
+    <version>snapshot</version>
     <name>hello</name>
     <url>https://github.com/Chamala27/SlackNotification.git</url>
 
